--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
 .App {
   text-align: center;
+  background: linear-gradient(89.7deg, rgb(0, 0, 0) -10.7%, rgb(53, 92, 125) 88.8%);
+  color: rgb(255, 219, 47);
+
+}
+
+.header {
+background: linear-gradient(109.6deg, rgb(255, 24, 134) 11.2%, rgb(252, 232, 68) 52%, rgb(53, 178, 239) 100.2%);color: rgb(17, 41, 61);
+}
+
+ /* ----InputContainer button ---- */
+.btn-input-container {
+ border: none;
+ border-radius: 10px;
+ background-color: rgb(53, 92, 125);
+ color:rgb(255, 219, 47) ;
 }
